# HaGameLiteTemplate

./: CMakeLists.txt  main.cpp  package-lock.json  package.json
assets/shaders/: sprite.frag
public/: CMakeCache.txt  HaGameLite.data  HaGameLite.html  HaGameLite.js  HaGameLite.wasm  Makefile  build.sh  cmake_install.cmake  server.js
